WRP-2512 - fix for tooltips overlapping on project and pull in changes from mainline button

--- a/app/styles/light.scss
+++ b/app/styles/light.scss
@@ -360,7 +360,7 @@ color: #ba68c8;
     background: transparent
 }
 
-
+.sca-light .project-icon.yellow.darken-2{background-color: #ffcc00; color:#fff;}
 .sca-light .project-icon.deep-purple.lighten-1{    background-color: #7e57c2;
     color: #fff;}
 	
